# SokuAI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  graph.py
OnlineHostMod/: main.cpp
OnlineHostMod/Network/: Socket.cpp
Training/: BaseAI.py  GameInstance.py  GameManager.py  dev.ini~  trainer.py
Training/AITrainerScriptCPP/: BaseAi.cpp  BaseAi.hpp  Exceptions.cpp  Exceptions.hpp  GameInstance.cpp  GameInstance.hpp  GameManager.cpp  GameManager.hpp  GenNeuron.cpp  GenNeuron.hpp  GeneticAI.cpp  GeneticAI.hpp  Neuron.cpp  Neuron.hpp  NeuronAi.cpp  NeuronAi.hpp  ObjectsNeuron.cpp  ObjectsNeuron.hpp  Packet.hpp  SwissTournamentManager.cpp  SwissTournamentManager.hpp  TournamentManager.cpp  TournamentManager.hpp  main.cpp  player.cpp  winDefines.hpp
Training/AITrainerScriptPY/: BaseAI.py  DeckFactory.py  GameInstance.py  GameManager.py  Neuron.py  NeuronAI.py  ReactAI.py  SwissTournamentManager.py  neuronAiTrainer.py  trainer.py
Training/AITrainerScriptPYTorch/: BaseAI.py  pytorch.py  trainer.py  trainer_dummy.py
Training/AITrainerScriptPYTorch/Soku/: BaseAI.py  DeckFactory.py  Env.py  GameInstance.py  GameManager.py  characters.py  weathers.py
Training/GameManagerScript/: BaseAI.py  DeckFactory.py  GameInstance.py  GameManager.py  Neuron.py  NeuronAI.py  ObjectsNeuron.py  ReactAI.py  SwissTournamentManager.py  neuronAiTrainer.py  trainer.py
Training/OfflineVersusMod/: Exceptions.hpp  Packet.hpp  main.cpp
Training/TrainingMod/: Packet.hpp  main.cpp  network.cpp  network.hpp  sokuData.cpp  sokuData.hpp  state.cpp  state.hpp
